package com.hxl.controller;

import com.hxl.feign.MarketingClient;
import com.hxl.grpc.marketing.*;
import io.seata.spring.annotation.GlobalTransactional;
import lombok.extern.slf4j.Slf4j;
import net.devh.boot.grpc.client.inject.GrpcClient;
import org.apache.rocketmq.client.producer.TransactionSendResult;
import org.apache.rocketmq.spring.core.RocketMQTemplate;
import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.jdbc.core.JdbcTemplate;
import org.springframework.messaging.Message;
import org.springframework.messaging.support.MessageBuilder;
import org.springframework.web.bind.annotation.GetMapping;
import org.springframework.web.bind.annotation.RequestMapping;
import org.springframework.web.bind.annotation.RestController;

import java.util.UUID;

@Slf4j
@RestController
@RequestMapping("/backend")
public class BackendController {

    @Autowired
    private MarketingClient marketingClient;

    @Autowired
    private RocketMQTemplate rocketMQTemplate;

    // ç›´æ¥å‘ Nacos é‡Œçš„ marketing-activity å¯»å€ï¼Œèµ° gRPC åè®®ï¼
    @GrpcClient("marketing-activity")
    private MarketingServiceGrpc.MarketingServiceBlockingStub marketingGrpcStub;

    // ç›´æ¥å‘ Nacos é‡Œçš„ marketing-activity å¯»å€ï¼Œèµ° gRPC åè®®ï¼
    @GrpcClient("marketing-activity")
    private MarketingTccServiceGrpc.MarketingTccServiceBlockingStub marketingTccGrpcStub;

    @Autowired
    private JdbcTemplate jdbcTemplate; // éšä¾¿æ³¨å…¥ä¸€ä¸ª DB æ“ä½œå·¥å…·æ¨¡æ‹Ÿæœ¬åœ°è½åº“

    @GetMapping("/do-action")
    public String doAction() {
        // å°±åƒè°ƒç”¨æœ¬åœ°æ–¹æ³•ä¸€æ ·ï¼Œå‘èµ·å¾®æœåŠ¡é—´è¿œç¨‹ RPC è°ƒç”¨ï¼
        // LoadBalancer ä¼šè‡ªåŠ¨å» Nacos æŸ¥ marketing-activity çš„ IPï¼Œå¹¶æ‰§è¡Œè½®è¯¢è´Ÿè½½å‡è¡¡

        log.info("å¼€å§‹æ‰§è¡Œä¸šåŠ¡é€»è¾‘do-action...");
        String result = marketingClient.issueCoupon("U_8888");
        return "Backend æ‰§è¡Œå®Œæ¯•ã€‚ä¸‹æ¸¸å“åº”: " + result;
    }

    @GetMapping("/do-grpc")
    public String doGrpcAction() {
        // 1. æ„é€ å¼ºç±»å‹çš„è¯·æ±‚å‚æ•°
        IssueCouponRequest request = IssueCouponRequest.newBuilder()
                .setUserId("U_GRPC_999")
                .build();

        // 2. å‘èµ·è·¨è¿›ç¨‹çš„äºŒè¿›åˆ¶è°ƒç”¨ï¼(BlockingStub ä»£è¡¨åŒæ­¥é˜»å¡è°ƒç”¨)
        IssueCouponResponse response = marketingGrpcStub.issueCoupon(request);

        return "gRPC å“åº” -> Code: " + response.getCode() + ", Msg: " + response.getMessage();
    }

    @GetMapping("/do-grpc-tx/error")
    @GlobalTransactional(name = "tax-finance-create-tx", rollbackFor = Exception.class)
    public String doGrpcTxActionError() {

        // 1. å…ˆæ‰§è¡Œè¿œç«¯ gRPC è°ƒç”¨ (æ‰£åº“å­˜ / å‘åˆ¸)
        IssueCouponRequest request = IssueCouponRequest.newBuilder().setUserId("U_TX_111").build();
        marketingGrpcStub.issueCoupon(request); // è¿™æ­¥ä¼šæˆåŠŸå†™å…¥ä¸‹æ¸¸æ•°æ®åº“

        // 2. æ¨¡æ‹Ÿæœ¬åœ°æ•°æ®åº“æ“ä½œ
        jdbcTemplate.update("INSERT INTO local_tax_record (user_id, amount) VALUES (?, ?)", "U_TX_111", 100);

        // 3. ğŸ’¥ è‡´å‘½ä¸€å‡»ï¼šæ¨¡æ‹Ÿæœ¬åœ°ä»£ç çªå‘å®•æœºæˆ–ç©ºæŒ‡é’ˆå¼‚å¸¸ï¼
        log.info("å‡†å¤‡æŠ›å‡ºå¼‚å¸¸ï¼Œæµ‹è¯• Seata å…¨å±€å›æ»š...");
        int error = 1 / 0; // å¼•å‘ ArithmeticException

        return "ä¸ä¼šæ‰§è¡Œåˆ°è¿™é‡Œ";
    }

    @GetMapping("/do-grpc-tx")
    @GlobalTransactional(name = "tax-finance-create-tx", rollbackFor = Exception.class)
    public String doGrpcTxAction() {

        // 1. å…ˆæ‰§è¡Œè¿œç«¯ gRPC è°ƒç”¨ (æ‰£åº“å­˜ / å‘åˆ¸)
        IssueCouponRequest request = IssueCouponRequest.newBuilder().setUserId("U_TX_111").build();
        marketingGrpcStub.issueCoupon(request); // è¿™æ­¥ä¼šæˆåŠŸå†™å…¥ä¸‹æ¸¸æ•°æ®åº“

        // 2. æ¨¡æ‹Ÿæœ¬åœ°æ•°æ®åº“æ“ä½œ
        jdbcTemplate.update("INSERT INTO local_tax_record (user_id, amount) VALUES (?, ?)", "U_TX_111", 100);

        return "æ‰§è¡Œæ­£ç¡®";
    }

    @GetMapping("/do-grpc-tx-tcc/error")
    @GlobalTransactional(name = "tax-finance-create-tx", rollbackFor = Exception.class)
    public String doGrpcTxTccActionError() {

        // 1. å…ˆæ‰§è¡Œè¿œç«¯ gRPC è°ƒç”¨ (æ‰£åº“å­˜ / å‘åˆ¸)
        IssueCouponTccRequest request = IssueCouponTccRequest.newBuilder().setUserId("U_TX_111").build();
        marketingTccGrpcStub.issueCoupon(request); // è¿™æ­¥ä¼šæˆåŠŸå†™å…¥ä¸‹æ¸¸æ•°æ®åº“

        // 2. æ¨¡æ‹Ÿæœ¬åœ°æ•°æ®åº“æ“ä½œ
        jdbcTemplate.update("INSERT INTO local_tax_record (user_id, amount) VALUES (?, ?)", "U_TX_111", 100);

        // 3. ğŸ’¥ è‡´å‘½ä¸€å‡»ï¼šæ¨¡æ‹Ÿæœ¬åœ°ä»£ç çªå‘å®•æœºæˆ–ç©ºæŒ‡é’ˆå¼‚å¸¸ï¼
        log.info("å‡†å¤‡æŠ›å‡ºå¼‚å¸¸ï¼Œæµ‹è¯• Seata å…¨å±€å›æ»š...");
        int error = 1 / 0; // å¼•å‘ ArithmeticException

        return "ä¸ä¼šæ‰§è¡Œåˆ°è¿™é‡Œ";
    }


    @GetMapping("/do-mq-action")
    public String doMqAction() {
        String userId = "U_MQ_888";
        log.info("============== [å‰ç«¯è¯·æ±‚åˆ°è¾¾] ==============");
        log.info("1. æ ¸å¿ƒä¸šåŠ¡ï¼šè®¢å•è½åº“æˆåŠŸ (æé€Ÿå®Œæˆ)...");

        // ğŸŒŸ 2. å¼‚æ­¥è§£è€¦ï¼šå‘é€ MQ æ¶ˆæ¯é€šçŸ¥ä¸‹æ¸¸å‘åˆ¸
        // å‚æ•° 1ï¼šTopic åç§°ï¼›å‚æ•° 2ï¼šæ¶ˆæ¯ä½“å†…å®¹
        rocketMQTemplate.convertAndSend("MARKETING_COUPON_TOPIC", userId);

        log.info("2. æ¶ˆæ¯å·²æŠ•é€’åˆ° RocketMQï¼Œæ ¸å¿ƒçº¿ç¨‹ç«‹å³é‡Šæ”¾ï¼");

        return "æ“ä½œæˆåŠŸï¼ä¼˜æƒ åˆ¸å°†åœ¨ç¨åå‘æ”¾è‡³æ‚¨çš„è´¦æˆ·ã€‚";
    }

    @GetMapping("/do-tx-mq")
    public String doTxMqAction() {
        String userId = "U_TX_MQ_001";
        // 1. ç”Ÿæˆä¸€ä¸ªå…¨å±€å”¯ä¸€çš„äº‹åŠ¡ID (æå…¶å…³é”®ï¼Œç”¨äºåç»­å¯¹è´¦å›æŸ¥)
        String transactionId = UUID.randomUUID().toString();

        log.info("============== [å‰ç«¯è¯·æ±‚åˆ°è¾¾] ==============");
        log.info("å‡†å¤‡å‘é€ RocketMQ åŠæ¶ˆæ¯ï¼Œäº‹åŠ¡ID: {}", transactionId);

        // 2. æ„é€  Spring Messaging çš„æ ‡å‡† Message å¯¹è±¡
        Message<String> message = MessageBuilder.withPayload(userId)
                // å°†äº‹åŠ¡IDå¡å…¥æ¶ˆæ¯å¤´
                .setHeader("TRANSACTION_ID", transactionId)
                .build();

        // 3. è‡´å‘½æ€æ‹›ï¼šå‘é€äº‹åŠ¡åŠæ¶ˆæ¯ï¼
        // å‚æ•°ï¼šTopicåç§°, æ¶ˆæ¯ä½“, ä¼ ç»™æœ¬åœ°äº‹åŠ¡çš„é¢å¤–å‚æ•°(æ­¤å¤„ä¼ userIdæ–¹ä¾¿ä¸šåŠ¡å¤„ç†)
        TransactionSendResult sendResult = rocketMQTemplate.sendMessageInTransaction(
                "MARKETING_COUPON_TOPIC",
                message,
                userId
        );

        log.info("åŠæ¶ˆæ¯å‘é€ç»“æœ: {}", sendResult.getSendStatus());
        return "æ“ä½œå·²å—ç†ï¼ç³»ç»Ÿæ­£åœ¨æé€Ÿå¤„ç†ä¸­...";
    }
}
